<resources>
    <string name="app_name">PHINMA-UPang-MarketPlace</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="or_connect_with">or connect with</string>
    <string name="sign_in_with_gmail">Sign In With Gmail</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="todo">TODO</string>
</resources>